--- a/w3flex.css
+++ b/w3flex.css
@@ -1,6 +1,8 @@
 body {
-    margin: 0;
+    width: 100vw;
+    height: 100vh;
     overflow-x: hidden;
+    margin: 0;
 }
 
 header {
@@ -8,7 +10,7 @@ header {
     width: 100vw;
     height: 74px;
     justify-content: space-between;
-    z-index: 1
+    z-index: 1;
 }
 
 .left {
@@ -86,13 +88,12 @@ img {
 nav {
     background-color: #282A35;
     height: 44px;
-    width: 100vw;
-    overflow-x: hidden;
     display: flex;
     justify-content: space-between;
     position: sticky;
     top: 0;
     z-index: 2;
+    max-width: 100vw;
 }
 
 .navleft-item>a {
@@ -160,7 +161,7 @@ ul {
 main {
     position: relative;
     left: 218px;
-    width: 80%;
+    width: calc(100vw - 400px);
     margin: 10px;
 
 }
@@ -190,7 +191,7 @@ h2 {
     box-sizing: border-box;
 }
 
-.sidenav>a {
+.sidenav-item>li>a {
     font-size: 15px;
     text-decoration: none;
     color: black;
@@ -200,7 +201,7 @@ h2 {
     box-sizing: border-box;
 }
 
-.sidenav>a:hover {
+.sidenav-item>li>a:hover {
     background-color: thistle;
 }
 
